fixtures/invalid/unowned-import-target/src/b/public.ts
import { secret } from "../unowned/secret";

export const b = secret;
